5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4310/executions/1662_2968.log
== TEST (2019-04-15 15:18:24) 
-- CODE:
L= lanche
S= salgado
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    L= lanche
NameError: name 'lanche' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:49) 
-- CODE:
from math import
if L= lanche or S= salgado

-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:55) 
-- CODE:
from math import
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:04) 
-- CODE:
*from math import*
-- ERROR:
File "XXXX", line 1
    *from math import*
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
